src/test/ui/const-generics/issue-67945-1.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-67945-1.rs:14:16
   |
LL |         let x: S = MaybeUninit::uninit();
   |                ^ cannot perform const operation using `S`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-67945-1.rs:17:45
   |
LL |         let b = &*(&x as *const _ as *const S);
   |                                             ^ cannot perform const operation using `S`
   |
   = note: type parameters may not be used in const expressions

error[E0392]: parameter `S` is never used
  --> $DIR/issue-67945-1.rs:11:12
   |
LL | struct Bug<S> {
   |            ^ unused parameter
   |
   = help: consider removing `S`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0392`.
